<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockQuote</string>
    <string name="action_settings">Settings</string>
    <string name="stock_symbols_list">Stock Symbols and Quotes</string>
<string name="delete_all_symbols">Delete All Symbols</string>
<string name="confirm_action">Are You Sure</string>
<string name="get_stock_quote">Quote</string>
<string name="go_to_website">Web</string>
<string name="yahoo_stock_url">http://finance.yahoo.com/q?s=</string>
<string name="enter_stock_symbol">Enter</string>
<string name="stock_company_name">Company Name:</string>
<string name="stock_year_low">Year Low:</string>
<string name="stock_year_high">Year High:</string>
<string name="stock_day_low">Day Low:</string>
<string name="stock_day_high">Day High:</string>
<string name="title_activity_stock_info">StockInfoActivity</string>
<string name="last_trade_price_only">Last Price:</string>
<string name="change">Change:</string>
<string name="days_range">Daily Price Range:</string>
<string name="stock_symbol">Enter Symbol</string>
<string name="invalid_stock_symbol">Invalid Stock Symbol</string>
<string name="missing_stock_symbol">Missing Stock Symbol</string>
<string name="ok">OK</string>

</resources>
