<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical|fill_horizontal" >

        <TextView
            android:id="@+id/enterSymbolTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_symbol"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/symbolEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/enterSymbolButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical|center_horizontal"
            android:text="@string/enter_stock_symbol"
            android:textSize="@dimen/stock_list_text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cafe_noir" >

        <TextView
            android:id="@+id/enterStocksSymbolTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="left|center_horizontal"
            android:padding="5dp"
            android:text="@string/stock_symbols_list"
            android:textColor="@color/black"
            android:textSize="@dimen/stock_list_text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/cafe_noir" >

        <ScrollView
            android:id="@+id/stockScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:padding="5dp" >

            <TableLayout
                android:id="@+id/stockTableScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/deleteStocksButton"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical|center_horizontal"
            android:text="@string/delete_all_symbols"
            android:textSize="@dimen/stock_list_text_size"
            android:typeface="normal" />
    </TableRow>

</TableLayout>